# FGCD

./: .gitignore  CONTRIBUTORS.md  COPYING.txt  README.md
data/: .gitignore
data/games/Mortal Kombat 1/: Game.fods
data/games/Mortal Kombat 1/characters/: Johnny Cage.fods
data/games/mortal_kombat_1/: Characters.fods  Game.fods  Moves.fods
docs/legal/contributors/: Copyright Assignment Agreement - Formal - Individual to Asmov LLC.fodt  Copyright Assignment Agreement - GPG - Individual to Asmov LLC.fodt  README.md
docs/legal/contributors/signatures/: Copyright Assignment Agreement - GPG - cornmonger to Asmov LLC.pdf.asc
model/: Cargo.toml
model/model/: Cargo.toml
model/model/src/: lib.rs
model/parse/: Cargo.toml
model/parse/src/: lib.rs  main.rs
model/src/: game.rs  input.rs  lib.rs  platform.rs
parse/: Cargo.toml  package-lock.json
parse/src/: binary.rs  lib.rs  main.rs  spreadsheet.rs
parse/src/binary/: game.rs
parse/src/binary/game/: character.rs
parse/src/spreadsheet/: game.rs
parse/src/spreadsheet/game/: character.rs
parse/tests/: io.rs
parser/: Cargo.toml
wasm/: Cargo.toml  LICENSE_MIT
wasm/src/: lib.rs
