[package]
name = "fgcd-parse"
version = "0.1.0"
edition = "2021"

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
bincode = "1.3.3"
derive_more = "0.99.17"
fgcd-model = { version = "0.1.0", path = "../model" }
#spreadsheet-ods = "0.17.0"
spreadsheet-ods = { version = "0.17.0", path = "../../../spreadsheet-ods" }
anyhow = "1.0.75"
thiserror = "1.0.49"
