[package]
name = "fgcd-wasm"
version = "0.2.0"
authors = ["roylaurie <roy.laurie.pub@asmov.software>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "0.2.84" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
fgcd-model = { version = "0.1.0", path = "../model" }
chrono = "0.4.31"
serde-wasm-bindgen = "0.6.0"
serde = { version = "1.0.188", features = ["derive"] }
fgcd-parse = { version = "0.1.0", path = "../parse" }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
