[package]
name = "fgcd-wasm"
version = "0.2.0"
authors = ["roylaurie <roy.laurie.pub@asmov.software>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "0.2.84" }
console_error_panic_hook = { version = "0.1.7", optional = true }
chrono = "0.4.31"
serde = { version = "1.0.188", features = ["derive"] }
serde-wasm-bindgen = "0.6.0"
web-sys = { version = "0.3.6", features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window' ] }
fgcd-model = { version = "0.1.0", path = "../model" }
fgcd-parse = { version = "0.1.0", path = "../parse" }
wasm-bindgen-futures = "0.4.37"
js-sys = "0.3.64"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
